Fix overflow on dispatch panel header.

--- a/js/app/dashboard/dashboard.scss
+++ b/js/app/dashboard/dashboard.scss
@@ -90,7 +90,7 @@ html, body {
       margin: 0;
       background-color: $dark-gray;
       color: $white;
-      overflow: hidden;
+      overflow-x: hidden;
       a {
         color: $white;
         &:hover, &:active {
